update feuilles de style et html
J'ai séparé les fichiers css: un pour le menu et un pour la corps
J'ai ajouté un top de 150 dans le but de créer un espace entre le menu et le début du bloc #corps-du-site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Responsive Menu</title>
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/style-menu.css">
+        <link rel="stylesheet" href="style/style-corps.css">
     </head>
     <body>
         <div id="menu-responsive">
@@ -36,7 +37,10 @@
                 </nav>
             </div>
         </div>
-        <div id="corps-du-site"></div>
+        <div id="corps-du-site">
+            <h2>Bienvenue sur mon site !</h2>
+            <p>Je suis en plein codage et chaque brique ajoutée est automatiquement visible</p>
+        </div>
         <div id="pieds-du-site"></div>
         <script src="script/script.js"></script>
     </body>
