Mise à jour des noms de fichiers
J'ai rénommé script.js en script-menu.js et changé le lien dans index.html

J'ai changé h2 en h1 dans index.ht,l

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             </div>
         </div>
         <div id="corps-du-site">
-            <h2>Bienvenue sur mon site !</h2>
+            <h1>Bienvenue sur mon site !</h1>
             <p>Je suis en plein codage et chaque brique ajoutée est automatiquement visible</p>
         </div>
         <div id="pieds-du-site"></div>
-        <script src="script/script.js"></script>
+        <script src="script/script-menu.js"></script>
     </body>
 </html>
