--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="menu-computer">
                 
                 <div class="on-screen-menu">
-                    <img class="logo-menu" src="logo/matete.png">
+                    <img class="logo-menu" src="logo/KSoft-Logo-1.png">
                     <ul>
                         <li><a href="">Home</a></li>
                         <li><a href="">About</a></li>
@@ -32,7 +32,7 @@
                 </div>
 
                 <nav>
-                    <img class="logo-menu" src="logo/matete.png">
+                    <img class="logo-menu" src="logo/KSoft-Logo-1.png">
                     <div class="ham-menu"><span></span><span></span><span></span></div>
                 </nav>
             </div>
