Changement de contenu ou site

--- a/index.html
+++ b/index.html
@@ -2,46 +2,24 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responsive Menu</title>
-        <link rel="stylesheet" href="style/style-menu.css">
-        <link rel="stylesheet" href="style/style-corps.css">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Mon responsive menu - Exercice 11</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="menu-responsive">
-            <div class="menu-computer">
-                
-                <div class="on-screen-menu">
-                    <img class="logo-menu" src="logo/KSoft-Logo-1.png">
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-            
-            <div class="menu-phone">
-                <div class="off-screen-menu">
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </div>
+        <div class="off-screen-menu">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </div>
 
-                <nav>
-                    <img class="logo-menu" src="logo/KSoft-Logo-1.png">
-                    <div class="ham-menu"><span></span><span></span><span></span></div>
-                </nav>
-            </div>
-        </div>
-        <div id="corps-du-site">
-            <h2>Bienvenue sur mon site !</h2>
-            <p>Je suis en plein codage et chaque brique ajoutée est automatiquement visible</p>
-        </div>
-        <div id="pieds-du-site"></div>
-        <script src="script/script-menu.js"></script>
+        <nav>
+            <div class="ham-menu"><span></span><span></span><span></span><span></span></div>
+        </nav>
+
+        <script src="script.js"></script>
     </body>
 </html>
