--- a/index.html
+++ b/index.html
@@ -219,7 +219,6 @@
                             <div class="nomMembre">Maître David Soke Kitungwa</div>
                             <div>Avocat à la Cour/ONA ...</div>
                             <div class="emailMembre" data-bs-toggle="modal" data-bs-target="#staticBackdrop">david.soke@tdavocats.cd</div>
-                            <br>
                             <div>
                                 Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                 <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
@@ -228,7 +227,6 @@
                                 <br>Pratiquant majoritairement dans le domaine du droit pénal pour son côté humainement sensible. Comme le dit Voltaire : « vaut mieux libérer 100 coupable que condamné 1 innocent ».
                                 <br>Il a eu à traiter beau nombre cas dans le domaine du droit des contrats, droit du sport, droit civil, droit immobilier, droit du Travail, droit de Migration, droit Fiscal, droit des Affaires en général et particulièrement en recouvrement de créances et accompagne également les entreprises dans leur projets ( création de société, partenariats commerciaux, etc …)
                                 <br>Il représente et assiste les personnes  devant toutes les instances judiciaires et institutions publiques.
-
                             </div>
                         </figcaption>
                     </figure>
@@ -249,14 +247,26 @@
                     <figure class="col-md-3 img-thumbnail imghvr-push-up">
                         <img src="equipe/sans.jpg" alt="Monsieur Jean-Luc Ndaie" class="figure-img img-fluid rounded">
                         <figcaption class="infoMembreEquipe figure-caption ih-fade-down ih-delay-sm">
-                            <div class="nomMembre">Monsieur Jean-Luc Ndaie</div>
-                            <div>Expert</div>
+                            <div class="nomMembre">Monsieur Jean-Luc ILUNGA Ndaie</div>
+                            <div>Professionnel du droit spécialisé dans la fiscalité</div>
                             <div class="emailMembre" data-bs-toggle="modal" data-bs-target="#staticBackdrop">jeanluc.ndaie@tdavocats.cd</div>
                             <br>
                             <div>
-                                Responsable du Cabinet « TD », du JOUR MOIS ANNEE à ce jour ;
-                                <br>... de Mois 20... à Mois 20... ;
-                                <br>Avocat au Barreau de Lualaba du jour Mois 20... à ce jour ;
+                                Diplômé en DROIT PRIVE et JUDICIAIRE de L’UNIVERSITE De Lubumbashi depuis le 30 juillet 2018  avec une spécialisation en fiscalité.
+                                <br>Un juriste fiscaliste est un professionnel du droit spécialisé dans la fiscalité. Voici une présentation générale de notre profil :
+                                <br>NOS COMPÉTENCES TECHNIQUES:
+                                <br>	Maîtrise des lois fiscales et de la législation en vigueur
+                                <br>	Capacité d'analyse et de recherche juridique
+                                <br>	Rédaction et révision de contrats fiscaux
+                                <br>	Conseil et accompagnement des clients dans leurs démarches fiscales
+                                <br>	Gestion des contentieux fiscaux et représentation devant les autorités fiscales
+                                <br>NOS QUALITÉS :
+                                <br>	Rigueur et précision;
+                                <br>	Capacité d'adaptation et réactivité face aux évolutions législatives;;
+                                <br>	Bonne communication et capacité à expliquer des concepts complexes de manière claire;
+                                <br>	Sens de l'éthique et confidentialité dans le traitement des informations.
+                                <br>
+                                <br>Le juriste fiscaliste joue un rôle clé dans la gestion fiscale des entreprises et des particuliers, en les conseillant sur les meilleures options pour optimiser leur situation fiscale tout en respectant la législation en vigueur.
                             </div>
                         </figcaption>
                     </figure>
