--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <nav id="barreDeMenu" class="container-fluid navbar navbar-expand-lg fixed-top">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="images/logo-td.gif" alt="">
+                        <img src="images/logo-td1.png" alt="">
                     </a>
                     <div class="itemMenu">
                         <button id="barreIconMenu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
