--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </p>
                         <p>
                             <ul class="listeAvecPuceSpeciale">
-                                <li>Droit des affaires dans le système OHADA : L'OHADA étant une nouvelle matière pour tous, mais étant plus un créneau indispensable pour prétendre mieux conseiller notre clientèle en droit des affaires, le Cabinet FBN met un point d'honneur à prendre part à toutes les formations organisées, dans la mesure de ses moyens, tant au niveau national qu'international à toutes les formations sur cette nouveauté qu'est le Droit OHADA.</li>
+                                <li>Droit des affaires dans le système OHADA : L'OHADA étant une nouvelle matière pour tous, mais étant plus un créneau indispensable pour prétendre mieux conseiller notre clientèle en droit des affaires, le Cabinet TD met un point d'honneur à prendre part à toutes les formations organisées, dans la mesure de ses moyens, tant au niveau national qu'international à toutes les formations sur cette nouveauté qu'est le Droit OHADA.</li>
                             </ul>
                         </p>
                         <p>
@@ -190,7 +190,7 @@
                             <div class="modal-body">
                                 <div class="mb-3">
                                     <label for="exampleFormControlInput1" class="form-label">Ecrire à</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="info@cabinetfbn.com" readonly>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="info@tdavocats.com" readonly>
                                 </div>
                                 <div class="mb-3">
                                     <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
@@ -223,7 +223,7 @@
                                 Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                 <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
                                 <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
-                                <br>Il procure tout le savoir-faire qu’il a développé au fil de ses années dans la pratique de cette noble profession, qui plus est, dû  à l’expérience engorgée au sein du Cabinet FBN & Associés et Cabinet PK&P lui devant une polyvalence dans le traitement des cas.
+                                <br>Il procure tout le savoir-faire qu’il a développé au fil de ses années dans la pratique de cette noble profession, qui plus est, dû  à l’expérience engorgée au sein du Cabinet TD & Associés et Cabinet PK&P lui devant une polyvalence dans le traitement des cas.
                                 <br>Pratiquant majoritairement dans le domaine du droit pénal pour son côté humainement sensible. Comme le dit Voltaire : « vaut mieux libérer 100 coupable que condamné 1 innocent ».
                                 <br>Il a eu à traiter beau nombre cas dans le domaine du droit des contrats, droit du sport, droit civil, droit immobilier, droit du Travail, droit de Migration, droit Fiscal, droit des Affaires en général et particulièrement en recouvrement de créances et accompagne également les entreprises dans leur projets ( création de société, partenariats commerciaux, etc …)
                                 <br>Il représente et assiste les personnes  devant toutes les instances judiciaires et institutions publiques.
