Photo dsk updated

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <nav id="barreDeMenu" class="container-fluid navbar navbar-expand-lg fixed-top">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="images/logo-td1.png" alt="">
+                        <img src="images/logo-td2.png" alt="">
                     </a>
                     <div class="itemMenu">
                         <button id="barreIconMenu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -214,7 +214,7 @@
                     <div class="display-2">Notre équipe</div>
                     <div class="espace-entre-titre-et-contenu"></div>
                     <figure class="col-md-3 img-thumbnail imghvr-push-up">
-                        <img src="equipe/dsk.jpg" alt="Maître David Soke Kitungwa" class="figure-img img-fluid rounded">
+                        <img src="equipe/dsk.png" alt="Maître David Soke Kitungwa" class="figure-img img-fluid rounded">
                         <figcaption class="infoMembreEquipe figure-caption ih-fade-down ih-delay-sm">
                             <div class="nomMembre">Maître David Soke Kitungwa</div>
                             <div>Avocat à la Cour/ONA ...</div>
