Photo dsk updated

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="display-2">Notre équipe</div>
                     <div class="espace-entre-titre-et-contenu"></div>
                     <figure class="col-md-3 img-thumbnail imghvr-push-up">
-                        <img src="equipe/dsk-ok.png" alt="Maître David Soke Kitungwa" class="figure-img img-fluid rounded">
+                        <img src="equipe/dsk001.png" alt="Maître David Soke Kitungwa" class="figure-img img-fluid rounded">
                         <figcaption class="infoMembreEquipe figure-caption ih-fade-down ih-delay-sm">
                             <div class="nomMembre">Maître David Soke Kitungwa</div>
                             <div>Avocat à la Cour/ONA ...</div>
