--- a/index.html
+++ b/index.html
@@ -137,43 +137,9 @@
                     <div class="espace-entre-titre-et-contenu"></div>
                     <div class="container">
                         <table class="table table-striped horaire-table">
-                            <thead>
-                                <tr>
-                                    <th class="horaire-jour">Jour</th>
-                                    <th class="horaire-heure-ouverture">Heure d'ouverture</th>
-                                    <th class="horaire-heure-fermeture">Heure de fermeture</th>
-                                </tr>
-                            </thead>
                             <tbody class="miseEnValeur">
                                 <tr>
-                                    <td data-label="Jour">Lundi</td>
-                                    <td data-label="HeureOuverture">08h00</td>
-                                    <td data-label="HeureFermeture">17h00</td>
-                                </tr>
-                                <tr>
-                                    <td data-label="Jour">Mardi</td>
-                                    <td data-label="HeureOuverture">08h00</td>
-                                    <td data-label="HeureFermeture">17h00</td>
-                                </tr>
-                                <tr>
-                                    <td data-label="Jour">Mercredi</td>
-                                    <td data-label="HeureOuverture">08h00</td>
-                                    <td data-label="HeureFermeture">17h00</td>
-                                </tr>
-                                <tr>
-                                    <td data-label="Jour">Jeudi</td>
-                                    <td data-label="HeureOuverture">08h00</td>
-                                    <td data-label="HeureFermeture">17h00</td>
-                                </tr>
-                                <tr>
-                                    <td data-label="Jour">Vendredi</td>
-                                    <td data-label="HeureOuverture">08h00</td>
-                                    <td data-label="HeureFermeture">17h00</td>
-                                </tr>
-                                <tr>
-                                    <td data-label="Jour">Samedi</td>
-                                    <td data-label="HeureOuverture">08h00</td>
-                                    <td data-label="HeureFermeture">12h00</td>
+                                    <td data-label="Jour">Lundi au Vendredi: 08h00 - 17h00</td>
                                 </tr>
                             </tbody>
                         </table>
