--- a/index.html
+++ b/index.html
@@ -50,6 +50,28 @@
         </style>
     </head>
     <body>
+        <!--Menu-->
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+            <a class="navbar-brand mr-auto mr-lg-0" style="margin-left: 20px;" href="#">CPM</a>
+            <button class="navbar-toggler p-0 border-0" style="margin-right: 10px;" type="button" data-toggle="offcanvas">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        
+            <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Signal</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Déconnexion</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
+
         <!--<div class="bg-dark bg-gradient text-white">-->
         <div>
             <nav id="barreDeMenu" class="container-fluid navbar navbar-expand-lg fixed-top">
