--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="imagehover.css-master/css/imagehover.min.css">
         <link rel="stylesheet" href="hamburgers-master/dist/hamburgers.css">
+
+        <!-- Custom styles for this template -->
+        <link href="styles/offcanvas.css" rel="stylesheet">
+        <link href="styles/modals.css" rel="stylesheet">
+        
+        <!-- Bootstrap core JAVASCRIPT -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <!--
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
