--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
         <!--<meta http-equiv="refresh" content="5">-->
         <title>Cabinet d'avocats TD</title>
         <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
@@ -14,17 +12,20 @@
         <!-- Bootstrap core CSS -->
         <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="style/style.css">
+        <!-- Imagehover CSS -->
         <link rel="stylesheet" href="imagehover.css-master/css/imagehover.min.css">
+        
+        <!-- hamburgers CSS -->
         <link rel="stylesheet" href="hamburgers-master/dist/hamburgers.css">
 
         <!-- Custom styles for this template -->
-        <link href="style/offcanvas.css" rel="stylesheet">
-        <link href="style/modals.css" rel="stylesheet">
+        <link href="style/style.css" rel="stylesheet">
+        <link href="bootstrap-5.0.2-dist/css/offcanvas.css" rel="stylesheet">
+        <link href="bootstrap-5.0.2-dist/css/form-validation.css" rel="stylesheet">
+        <link href="bootstrap-5.0.2-dist/css/modals.css" rel="stylesheet">
 
         <!-- Bootstrap core JAVASCRIPT -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <!--
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -378,14 +379,16 @@
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-        <script src="../../assets/js/vendor/popper.min.js"></script>
+        <!--https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/-->
+        <script>window.jQuery || document.write('<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2assets/js/vendor/popper.min.js"></script>
         <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
-        <script src="../../assets/js/vendor/holder.min.js"></script>
-        <script src="styles/offcanvas.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2assets/js/vendor/holder.min.js"></script>
+        
+        <!-- Custom scripts for this template -->
+        <script src="bootstrap-5.0.2-dist/js/offcanvas.js"></script>
         <script src="bootstrap-5.0.2-dist/js/boitemodale.js"></script>
+        <script src="bootstrap-5.0.2-dist/js/form-validation.js"></script>
         <!---->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
     </body>
 </html>
