--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--<meta http-equiv="refresh" content="5">-->
-        <title>Cabinet d'avocats TD</title>
+        <title>TD Avocats</title>
         <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
         <link rel="shortcut icon" href="images/logo-td.jpg" type="image/x-icon">
         
@@ -64,7 +64,9 @@
     <body>
         <!--Menu-->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-            <a class="navbar-brand mr-auto mr-lg-0" style="margin-left: 20px;" href="#">CPM</a>
+            <a class="navbar-brand mr-auto mr-lg-0" style="margin-left: 20px;" href="#">
+                <img src="images/logo-td2.png" alt="">
+            </a>
             <button class="navbar-toggler p-0 border-0" style="margin-right: 10px;" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -384,7 +386,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2assets/js/vendor/popper.min.js"></script>
         <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2assets/js/vendor/holder.min.js"></script>
-        
+
         <!-- Custom scripts for this template -->
         <script src="bootstrap-5.0.2-dist/js/offcanvas.js"></script>
         <script src="bootstrap-5.0.2-dist/js/boitemodale.js"></script>
