--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <body>
         <!--Menu-->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-            <a class="navbar-brand mr-auto mr-lg-0" style="margin-left: 20px;" href="#">
-                <img src="images/logo-td2.png" alt="">
+            <a class="navbar-brand mr-auto mr-lg-0" href="#">
+                <img src="images/tdlogo2.jpg" alt="">
             </a>
             <button class="navbar-toggler p-0 border-0" style="margin-right: 10px;" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
