update right td logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--<meta http-equiv="refresh" content="5">-->
         <title>TD Avocats</title>
         <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
-        <link rel="shortcut icon" href="images/logo-td.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="images/tdlogo-ok.png" type="image/x-icon">
         
         <!-- Bootstrap core CSS -->
         <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
         <!--Menu-->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
             <a class="navbar-brand mr-auto mr-lg-0" href="#">
-                <img src="images/tdlogo2.jpg" alt="">
+                <img src="images/tdlogo-ok.png" alt="">
             </a>
             <button class="navbar-toggler p-0 border-0" style="margin-right: 10px;" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
