update nav logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--<meta http-equiv="refresh" content="5">-->
         <title>TD Avocats</title>
         <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
-        <link rel="shortcut icon" href="images/tdlogo-ok.png" type="image/x-icon">
+        <link rel="shortcut icon" href="images/tdlogo2.jpg" type="image/x-icon">
         
         <!-- Bootstrap core CSS -->
         <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
