--- a/index.html
+++ b/index.html
@@ -196,12 +196,16 @@
                     <div class="espace-transitoire"></div>
                     <div class="display-2">Notre équipe</div>
                     <div class="espace-entre-titre-et-contenu"></div>
-                    <figure class="col-md-3 img-thumbnail imghvr-push-up">
-                        <img src="equipe/dsk001.png" alt="Maître David Soke Kitungwa" class="figure-img img-fluid rounded">
-                        <figcaption class="infoMembreEquipe figure-caption ih-fade-down ih-delay-sm">
-                            <div class="nomMembre">Maître David Soke Kitungwa</div>
-                            <div>Avocat à la Cour/ONA ...</div>
-                            <div class="emailMembre" data-bs-toggle="modal" data-bs-target="#staticBackdrop">david.soke@tdavocats.cd</div>
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-header">Maître David Soke Kitungwa
+                        </div>
+                        <div class="card-body">
+                            <img src="equipe/dsk001.png" alt="Maître David Soke Kitungwa" class="card-img-top img-fluid rounded">
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">En savoir plus</a>
+                        </div>
+                        <!--
                             <div>
                                 Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                 <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
@@ -211,55 +215,56 @@
                                 <br>Il a eu à traiter beau nombre cas dans le domaine du droit des contrats, droit du sport, droit civil, droit immobilier, droit du Travail, droit de Migration, droit Fiscal, droit des Affaires en général et particulièrement en recouvrement de créances et accompagne également les entreprises dans leur projets ( création de société, partenariats commerciaux, etc …)
                                 <br>Il représente et assiste les personnes  devant toutes les instances judiciaires et institutions publiques.
                             </div>
-                        </figcaption>
-                    </figure>
-                    <figure class="col-md-3 img-thumbnail imghvr-push-up">
-                        <img src="equipe/sans.jpg" alt="Maître Timothée Kibasa Luembwe" class="figure-img img-fluid rounded">
-                        <figcaption class="infoMembreEquipe figure-caption ih-fade-down ih-delay-sm">
-                            <div class="nomMembre">Maître Timothée Kibasa Luembwe</div>
-                            <div>Avocate à la Cour/ONA ...</div>
-                            <div class="emailMembre" data-bs-toggle="modal" data-bs-target="#staticBackdrop">timothee.kibasa@tdavocats.cd</div>
-                            <br>
+                        -->
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-header">Maître Timothée Kibasa Luembwe
+                        </div>
+                        <div class="card-body">
+                            <img src="equipe/sans.jpg" alt="Maître Timothée Kibasa Luembwe" class="card-img-top img-fluid rounded">
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">En savoir plus</a>
+                        </div>
+                        <!--
                             <div>
-                                Responsable de l'étude « TD Cabinet », du JOUR MOIS ANNEE à ce jour ;
-                                <br>... de Mois 20... à Mois 20... ;
-                                <br>Avocat au Barreau de Lualaba du jour Mois 20... à ce jour ;
+                                Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
+                                <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
+                                <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
+                                <br>Il procure tout le savoir-faire qu’il a développé au fil de ses années dans la pratique de cette noble profession, qui plus est, dû  à l’expérience engorgée au sein du Cabinet FBN & Associés et Cabinet PK&P lui devant une polyvalence dans le traitement des cas.
+                                <br>Pratiquant majoritairement dans le domaine du droit pénal pour son côté humainement sensible. Comme le dit Voltaire : « vaut mieux libérer 100 coupable que condamné 1 innocent ».
+                                <br>Il a eu à traiter beau nombre cas dans le domaine du droit des contrats, droit du sport, droit civil, droit immobilier, droit du Travail, droit de Migration, droit Fiscal, droit des Affaires en général et particulièrement en recouvrement de créances et accompagne également les entreprises dans leur projets ( création de société, partenariats commerciaux, etc …)
+                                <br>Il représente et assiste les personnes  devant toutes les instances judiciaires et institutions publiques.
                             </div>
-                        </figcaption>
-                    </figure>
-                    <figure class="col-md-3 img-thumbnail imghvr-push-up">
-                        <img src="equipe/sans.jpg" alt="Monsieur Jean-Luc Ndaie" class="figure-img img-fluid rounded">
-                        <figcaption class="infoMembreEquipe figure-caption ih-fade-down ih-delay-sm">
-                            <div class="nomMembre">Monsieur Jean-Luc ILUNGA Ndaie</div>
-                            <div>Professionnel du droit spécialisé dans la fiscalité</div>
-                            <div class="emailMembre" data-bs-toggle="modal" data-bs-target="#staticBackdrop">jeanluc.ndaie@tdavocats.cd</div>
-                            <br>
+                        -->
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-header">Maître Jean Luc Nday</div>
+                        <div class="card-body">
+                            <img src="equipe/sans.jpg" alt="Maître Jean Luc Nday" class="card-img-top img-fluid rounded">
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">En savoir plus</a>
+                        </div>
+                        <!--
                             <div>
-                                Diplômé en DROIT PRIVE et JUDICIAIRE de L’UNIVERSITE De Lubumbashi depuis le 30 juillet 2018  avec une spécialisation en fiscalité.
-                                <br>Un juriste fiscaliste est un professionnel du droit spécialisé dans la fiscalité. Voici une présentation générale de notre profil :
-                                <br>NOS COMPÉTENCES TECHNIQUES:
-                                <br>	Maîtrise des lois fiscales et de la législation en vigueur
-                                <br>	Capacité d'analyse et de recherche juridique
-                                <br>	Rédaction et révision de contrats fiscaux
-                                <br>	Conseil et accompagnement des clients dans leurs démarches fiscales
-                                <br>	Gestion des contentieux fiscaux et représentation devant les autorités fiscales
-                                <br>NOS QUALITÉS :
-                                <br>	Rigueur et précision;
-                                <br>	Capacité d'adaptation et réactivité face aux évolutions législatives;;
-                                <br>	Bonne communication et capacité à expliquer des concepts complexes de manière claire;
-                                <br>	Sens de l'éthique et confidentialité dans le traitement des informations.
-                                <br>
-                                <br>Le juriste fiscaliste joue un rôle clé dans la gestion fiscale des entreprises et des particuliers, en les conseillant sur les meilleures options pour optimiser leur situation fiscale tout en respectant la législation en vigueur.
+                                Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
+                                <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
+                                <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
+                                <br>Il procure tout le savoir-faire qu’il a développé au fil de ses années dans la pratique de cette noble profession, qui plus est, dû  à l’expérience engorgée au sein du Cabinet FBN & Associés et Cabinet PK&P lui devant une polyvalence dans le traitement des cas.
+                                <br>Pratiquant majoritairement dans le domaine du droit pénal pour son côté humainement sensible. Comme le dit Voltaire : « vaut mieux libérer 100 coupable que condamné 1 innocent ».
+                                <br>Il a eu à traiter beau nombre cas dans le domaine du droit des contrats, droit du sport, droit civil, droit immobilier, droit du Travail, droit de Migration, droit Fiscal, droit des Affaires en général et particulièrement en recouvrement de créances et accompagne également les entreprises dans leur projets ( création de société, partenariats commerciaux, etc …)
+                                <br>Il représente et assiste les personnes  devant toutes les instances judiciaires et institutions publiques.
                             </div>
-                        </figcaption>
-                    </figure>
+                        -->
+                    </div>
                 </div>
                 
                 <div class="container column" id="contact">
                     <div class="espace-transitoire"></div>
                     <div class="display-2">Nous contacter</div>
                     <div class="espace-entre-titre-et-contenu" id="notreAdresse"></div>
-                    <!--
+                    <!---->
                     <span class="miniTitreImportant blockquote-footer">Notre adresse</span>
                     <br>
                     <br>
@@ -268,13 +273,13 @@
                             <path d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022M6 8.694 1 10.36V15h5zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5z"/>
                             <path d="M2 11h1v1H2zm2 0h1v1H4zm-2 2h1v1H2zm2 0h1v1H4zm4-4h1v1H8zm2 0h1v1h-1zm-2 2h1v1H8zm2 0h1v1h-1zm2-2h1v1h-1zm0 2h1v1h-1zM8 7h1v1H8zm2 0h1v1h-1zm2 0h1v1h-1zM8 5h1v1H8zm2 0h1v1h-1zm2 0h1v1h-1zm0-2h1v1h-1z"/>
                         </svg>
-                        <span class="miseEnValeur">n°..., Avenue ..., Quartier ...</span>, Ville de Lubumbashi, Province du Haut-Katanga, République Démocratique du Congo
+                        <span class="miseEnValeur">Avenue Mwepu</span>, Lubumbashi, République Démocratique du Congo
                     </p>
-                    <iframe class="container" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d465.54764676997485!2d27.448200485583346!3d-11.655561310776468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sus!4v1708118937822!5m2!1sfr!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="container" src="https://www.google.com/maps/place/11%C2%B039'56.0%22S+27%C2%B029'04.5%22E/@-11.665561,27.4820001,17z/data=!3m1!4b1!4m4!3m3!8m2!3d-11.665561!4d27.484575?entry=ttu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <br>
                     <br>
                     <br>
-                    -->
+                    <!---->
                     <span class="miniTitreImportant blockquote-footer" id="nousContacter">Nous contater</span>
                     <br>
                     <br>
