--- a/index.html
+++ b/index.html
@@ -203,8 +203,30 @@
                             <img src="equipe/dsk001.png" alt="Maître David Soke Kitungwa" class="card-img-top img-fluid rounded">
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">En savoir plus</a>
+                            <!-- Button trigger modal -->
+                            <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">En savoir plus</a>
                         </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                        ...
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
+
+
                         <!--
                             <div>
                                 Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
