maj couleur texte menu

--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
-                    <div class="offcanvas-header bg-dark" style="height: 120px">
-                        <h5 class="offcanvas-title text-light fs-4" id="offcanvasNavbar2Label">Menu</h5>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
+                    <div class="offcanvas-header bg-dark text-light" style="height: 120px">
+                        <h5 class="offcanvas-title fs-4" id="offcanvasNavbar2Label">Menu</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body bg-dark">
+                    <div class="offcanvas-body bg-dark text-light">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item active">
                                 <a class="nav-link fs-6" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
