--- a/index.html
+++ b/index.html
@@ -153,20 +153,26 @@
                 </button>
             
                 <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#horaires"><span class="lettre1itemMenu">H</span>oraires</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#equipe"><span class="lettre1itemMenu">E</span>quipe</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact"><span class="lettre1itemMenu">C</span>ontact</a>
-                        </li>
-                    </ul>
+                    <div class="offcanvas-header text-light" style="height: 120px">
+                        <h5 class="offcanvas-title fs-4" id="offcanvasNavbar2Label">Menu</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-center">
+                            <li class="nav-item active">
+                                <a class="nav-link fs-6" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-6" href="#horaires"><span class="lettre1itemMenu">H</span>oraires</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-6" href="#equipe"><span class="lettre1itemMenu">E</span>quipe</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-6" href="#contact"><span class="lettre1itemMenu">C</span>ontact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
