--- a/index.html
+++ b/index.html
@@ -264,16 +264,44 @@
                 
                 <div class="container" id="horaires">
                     <div class="espace-transitoire"></div>
-                    <div class="display-2">Nos Horaires</div>
+                    <div class="display-2">Horaires de travail</div>
                     <div class="espace-entre-titre-et-contenu"></div>
-                    <div class="container">
-                        <table class="table table-striped horaire-table">
-                            <tbody class="miseEnValeur">
-                                <tr>
-                                    <td data-label="Jour">Lundi au Vendredi: 08h00 - 17h00</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="container working-hours">
+                        <h2 class="my-4">Horaires de travail</h2>
+                        <div class="row">
+                            <div class="col-12 col-md-6 offset-md-3">
+                                <ul class="list-group">
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <span class="day">Lundi</span>
+                                        <span>07h00 - 17h00</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <span class="day">Mardi</span>
+                                        <span>07h00 - 17h00</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <span class="day">Mercredi</span>
+                                        <span>07h00 - 17h00</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <span class="day">Jeudi</span>
+                                        <span>07h00 - 17h00</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <span class="day">Vendredi</span>
+                                        <span>07h00 - 17h00</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <span class="day">Samedi</span>
+                                        <span>08h00 - 12h30</span>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <span class="day">Dimanche</span>
+                                        <span>Fermé</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- Button trigger modal -->
