--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!---->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Offcanvas navbar large">
             <div class="container">
-                <img src="images/tdlogo-ok.png" class="navbar-brand" style="width: 100px; height: 100px">
+                <img src="images/tdlogo-ok.png" class="navbar-brand" style="height: 100px">
                 <button class="navbar-toggler" style="margin-right: 10px;" type="button" data-toggle="offcanvas">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -177,38 +177,6 @@
             </div>
         </nav>
 
-        <!--
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Offcanvas navbar large">
-            <div class="container-fluid">
-                <img src="images/tdlogo-ok.png" class="navbar-brand" style="width: 100px; height: 100px">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-end justify-content-center" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
-                    <div class="offcanvas-header bg-dark text-light" style="height: 120px">
-                        <h5 class="offcanvas-title fs-4" id="offcanvasNavbar2Label">Menu</h5>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body bg-dark text-light">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item active">
-                                <a class="nav-link fs-6" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fs-6" href="#horaires"><span class="lettre1itemMenu">H</span>oraires</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fs-6" href="#equipe"><span class="lettre1itemMenu">E</span>quipe</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fs-6" href="#contact"><span class="lettre1itemMenu">C</span>ontact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        -->
         <!--<div class="bg-dark bg-gradient text-white">-->
         <main role="main" class="container">
             <div class="container" id="corpsSite">
@@ -266,10 +234,10 @@
                     <div class="espace-transitoire"></div>
                     <div class="display-2">Horaires de travail</div>
                     <div class="espace-entre-titre-et-contenu"></div>
-                    <div class="container working-hours">
-                        <h2 class="my-4">Horaires de travail</h2>
+                    <div class="working-hours">
+                        <!--<h2 class="my-4">Horaires de travail</h2>-->
                         <div class="row">
-                            <div class="col-12 col-md-6 offset-md-3">
+                            <!--<div class="col-6 col-md-6 offset-md-3">-->
                                 <ul class="list-group">
                                     <li class="list-group-item d-flex justify-content-between align-items-center">
                                         <span class="day">Lundi</span>
@@ -300,7 +268,7 @@
                                         <span>Fermé</span>
                                     </li>
                                 </ul>
-                            </div>
+                            <!--</div>-->
                         </div>
                     </div>
                 </div>
