--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@
     </head>
     <body>
         <!--Menu-->
-        <!---->
+        <!--
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Offcanvas navbar large">
             <div class="container">
-                <img src="images/tdlogo-ok.png" class="navbar-brand" style="width: 100px; height: 100px">
+                <a href="" class="navbar-brand">TD Avocats</a>
                 <button class="navbar-toggler" style="margin-right: 10px;" type="button" data-toggle="offcanvas">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             
                 <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-                    <div class="offcanvas-header text-light" style="height: 120px">
+                    <div class="offcanvas-header text-light">
                         <h5 class="offcanvas-title fs-4" id="offcanvasNavbar2Label">Menu</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
@@ -177,38 +177,49 @@
             </div>
         </nav>
 
-        <!--
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Offcanvas navbar large">
+        -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Offcanvas navbar large">
             <div class="container-fluid">
-                <img src="images/tdlogo-ok.png" class="navbar-brand" style="width: 100px; height: 100px">
+                <a class="navbar-brand" href="#" translate="no">TD Avocats</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end justify-content-center" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
-                    <div class="offcanvas-header bg-dark text-light" style="height: 120px">
-                        <h5 class="offcanvas-title fs-4" id="offcanvasNavbar2Label">Menu</h5>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Menu</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body bg-dark text-light">
+                    <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item active">
-                                <a class="nav-link fs-6" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./">Accueil</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Course
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="liste-course.html">Voir</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Màj
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="ajout-maj.html">Ajouter</a></li>
+                                    <li><a class="dropdown-item" href="liste-maj">Voir</a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link fs-6" href="#horaires"><span class="lettre1itemMenu">H</span>oraires</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fs-6" href="#equipe"><span class="lettre1itemMenu">E</span>quipe</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link fs-6" href="#contact"><span class="lettre1itemMenu">C</span>ontact</a>
+                                <a class="nav-link" id="btn_se_deconnecter">Déconnexion</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
-        -->
+        
         <!--<div class="bg-dark bg-gradient text-white">-->
         <main role="main" class="container">
             <div class="container" id="corpsSite">
