--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
         </nav>
         -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Offcanvas navbar large">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top" aria-label="Offcanvas navbar large">
             <a class="navbar-brand" href="#" translate="no">TD Avocats</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
