--- a/index.html
+++ b/index.html
@@ -186,29 +186,18 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbar2Label">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./">Accueil</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Course
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="liste-course.html">Voir</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Màj
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="ajout-maj.html">Ajouter</a></li>
-                            <li><a class="dropdown-item" href="liste-maj">Voir</a></li>
-                        </ul>
+                <ul class="navbar-nav justify-content-center">
+                    <li class="nav-item active">
+                        <a class="nav-link fs-6" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="btn_se_deconnecter">Déconnexion</a>
+                        <a class="nav-link fs-6" href="#horaires"><span class="lettre1itemMenu">H</span>oraires</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-6" href="#equipe"><span class="lettre1itemMenu">E</span>quipe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-6" href="#contact"><span class="lettre1itemMenu">C</span>ontact</a>
                     </li>
                 </ul>
             </div>
