--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbar2Label">
+            <div class="collapse navbar-collapse" id="offcanvasNavbar" aria-labelledby="offcanvasNavbar2Label">
                 <ul class="navbar-nav justify-content-center">
                     <li class="nav-item active">
                         <a class="nav-link fs-6" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
