--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                         </div>
                                         <div class="modal-body">
                                             <p class="align-items-center resume-avocat">
-                                                <img src="equipe/dsk001.png" alt="" class="rounded-circle" width="80" height="80">
+                                                <img src="equipe/sans.jpg" alt="" class="rounded-circle" width="80" height="80">
                                                 Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                                 <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
                                                 <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
@@ -452,7 +452,7 @@
                                         </div>
                                         <div class="modal-body">
                                             <p class="align-items-center resume-avocat">
-                                                <img src="equipe/dsk001.png" alt="" class="rounded-circle" width="80" height="80">
+                                                <img src="equipe/sans.jpg" alt="" class="rounded-circle" width="80" height="80">
                                                 Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                                 <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
                                                 <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
